# dis-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  justfile
app-receiver/: Cargo.toml  README.md
app-receiver/src/: main.rs
cdis-assemble/: CHANGELOG.MD  CHANGELOG.md  Cargo.toml  README.MD  README.md
cdis-assemble/src/: codec.rs  constants.rs  lib.rs  parser_utils.rs  parsing.rs  utils.rs  writing.rs
cdis-assemble/src/acknowledge/: codec.rs  model.rs  parser.rs  writer.rs
cdis-assemble/src/action_request/: codec.rs  model.rs  parser.rs  writer.rs
cdis-assemble/src/action_response/: codec.rs  model.rs  parser.rs  writer.rs
cdis-assemble/src/collision/: codec.rs  model.rs  parser.rs  writer.rs
cdis-assemble/src/comment/: codec.rs  model.rs  parser.rs  writer.rs
cdis-assemble/src/create_entity/: codec.rs  model.rs  parser.rs  writer.rs
cdis-assemble/src/data/: codec.rs  model.rs  parser.rs  writer.rs
cdis-assemble/src/data_query/: codec.rs  model.rs  parser.rs  writer.rs
cdis-assemble/src/designator/: codec.rs  model.rs  parser.rs  writer.rs
cdis-assemble/src/detonation/: codec.rs  mod.rs  model.rs  parser.rs  writer.rs
cdis-assemble/src/electromagnetic_emission/: codec.rs  model.rs  parser.rs  writer.rs
cdis-assemble/src/entity_state/: codec.rs  model.rs  parser.rs  writer.rs
cdis-assemble/src/event_report/: codec.rs  model.rs  parser.rs  writer.rs
cdis-assemble/src/fire/: codec.rs  model.rs  parser.rs  writer.rs
cdis-assemble/src/iff/: codec.rs  model.rs  parser.rs  writer.rs
cdis-assemble/src/receiver/: codec.rs  model.rs  parser.rs  writer.rs
cdis-assemble/src/records/: codec.rs  mod.rs  model.rs  parser.rs  timestamp.rs  writer.rs
cdis-assemble/src/remove_entity/: codec.rs  model.rs  parser.rs  writer.rs
cdis-assemble/src/set_data/: codec.rs  model.rs  parser.rs  writer.rs
cdis-assemble/src/signal/: codec.rs  model.rs  parser.rs  writer.rs
cdis-assemble/src/start_resume/: codec.rs  model.rs  parser.rs  writer.rs
cdis-assemble/src/stop_freeze/: codec.rs  model.rs  parser.rs  writer.rs
cdis-assemble/src/transmitter/: codec.rs  model.rs  parser.rs  writer.rs
cdis-assemble/src/types/: mod.rs  model.rs  parser.rs  writer.rs
cdis-assemble/src/unsupported/: mod.rs
cdis-assemble/tests/: codec_tests.rs  encoding_tests.rs  state_tests.rs
cdis-gateway/: .gitignore  CHANGELOG.MD  CHANGELOG.md  Cargo.toml  LICENSE  README.MD  README.md  build.rs  package.json  tailwind.config.js
cdis-gateway/assets/: index.html
cdis-gateway/assets/scripts/: htmx-1.9.12-ext-sse.js  htmx-1.9.12-min.js  index.js
cdis-gateway/config/: localhost_config.toml  sample_config.toml
cdis-gateway/src/: codec.rs  config.rs  main.rs  site.rs  stats.rs
cdis-gateway/templates/: base.html  codec_stats.html  config.html  config_meta.html  index.html  indicators.html  socket_stats.html
common-entity-types/: Cargo.toml
common-entity-types/src/: lib.rs
dis-assemble-gen-2/: CHANGELOG.md  Cargo.toml  README.md  build.rs
dis-assemble-gen-2/alloc_profiling/: Cargo.toml
dis-assemble-gen-2/alloc_profiling/src/: main.rs
dis-assemble-gen-2/definitions/enumerations/: SISO-REF-010.xsd  overrides.toml
dis-assemble-gen-2/no_std/: .gitignore  Cargo.toml
dis-assemble-gen-2/src/: constants.rs  fixed_parameters.rs  lib.rs  utils.rs
dis-assemble-gen-2/src/common/: errors.rs  mod.rs  model.rs  writer.rs
dis-assemble-gen-2/src/v6/: mod.rs
dis-assemble-gen-2/src/v7/: builder.rs  parser.rs
dis-assemble-gen-2/tests/: pdu.rs
dis-assemble-gen-3/: Cargo.toml  README.md  build.rs
dis-assemble-gen-3/definitions/enumerations/: overrides.toml
dis-assemble-gen-3/definitions/v8-schemas/: DIS_Acoustic.xml  DIS_CommonRecords.xml  DIS_Communications.xml  DIS_EE.xml  DIS_EntityInfoInteraction.xml  DIS_EntityManagement.xml  DIS_IFF.xml  DIS_Laser.xml  DIS_Logistics.xml  DIS_SIMAN.xml  DIS_SyntheticEnv.xml
dis-assemble-gen-3/src/: constants.rs  fixed_parameters.rs  impls.rs  lib.rs  parser.rs  symbolic_names.rs  utils.rs
dis-assemble-gen-3/tests/: consistency.rs  parsers.rs
dis-gen-ieee-1278-gen-3/: CHANGELOG.md  Cargo.toml  README.md
dis-gen-ieee-1278-gen-3/src/: constants.rs  extraction.rs  generation.rs  lib.rs  overrides.rs  pre_processing.rs
dis-gen-ieee-1278-v8/: Cargo.toml  README.md
dis-gen-ieee-1278-v8/src/: extraction.rs  generation.rs  lib.rs
dis-gen-siso-ref-010/: CHANGELOG.md  Cargo.toml  README.md
dis-gen-siso-ref-010/src/: extraction.rs  generation.rs  lib.rs
dis-gen-utils/: Cargo.toml  README.md
dis-gen-utils/src/: lib.rs
dis-infra-core/: Cargo.toml
dis-infra-core/examples/: trial.rs  types.rs
dis-infra-core/specification/: sample_spec.toml
dis-infra-core/src/: core.rs  error.rs  lib.rs  runtime.rs
dis-infra-core/tests/: runtime.rs
dis-lib/: Cargo.toml  README.MD
dis-rs/: CHANGELOG.MD  CHANGELOG.md  Cargo.toml  README.MD  README.md  build.rs
dis-rs-macros/: Cargo.toml  README.md
dis-rs-macros/src/: lib.rs
dis-rs-macros/tests/: derive_macro.rs
dis-rs/alloc_profiling/: Cargo.toml
dis-rs/no_std/: Cargo.toml  memory.x
dis-rs/src/: constants.rs  fixed_parameters.rs  lib.rs  math.rs  utils.rs  variable_parameters.rs
dis-rs/tests/: pdu.rs
dis_lib/: Cargo.toml
dis_lib/src/: lib.rs
dis_rs/: Cargo.toml  README.MD  build.rs
dis_rs/gen_src/: enumerations.rs  example.rs
dis_rs/src/: constants.rs  lib.rs
dis_rs_macros/: Cargo.toml  LICENSE  README.md
dis_rs_macros/src/: lib.rs
dis_rs_macros/tests/: derive_macro.rs
examples/basic-usage-gateway/: Cargo.toml  README.md
examples/custom-gateway-node/: Cargo.toml
gateway-core/: CHANGELOG.md  Cargo.toml  README.md
gateway-core/examples/: types.rs
gateway-core/specification/: dis.toml  network.toml  sample_spec.toml
gateway-core/src/: core.rs  error.rs  lib.rs  runtime.rs
gateway-core/tests/: network_nodes.rs  runtime.rs
recorder/: Cargo.toml  README.md
recorder-cli/: Cargo.toml
recorder-cli/src/: main.rs
recorder/migrations/: 01_create_tables.sql  02_create_dis_tables.sql
recorder/src/: db.rs  lib.rs  model.rs
src/: dis.rs  (+1 more)
(+618 files in other folders)
