[workspace]
members = ["cdis-assemble", "cdis-gateway", "dis-rs", "dis-infra-core", "examples/*"]
resolver = "2"

[workspace.package]
edition = "2021"
rust-version = "1.76"
license = "MIT"
authors = ["Zeeger Lubsen <zeeger@lubsen.eu>"]
repository = "https://github.com/zlubsen/dis-rs"
categories = ["network-programming"]

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
multiple_crate_versions = "allow"
