[workspace]
members = ["cdis-assemble", "cdis-gateway", "dis-rs", "gateway-core", "examples/*", "dis-gen-siso-ref-010", "dis-gen-ieee-1278-gen-3", "dis-gen-utils", "dis-assemble-gen-2", "dis-assemble-gen-3"]
resolver = "2"

[workspace.package]
edition = "2021"
rust-version = "1.82"
license = "MIT"
authors = ["Zeeger Lubsen <zeeger@lubsen.eu>"]
repository = "https://github.com/zlubsen/dis-rs"
categories = ["network-programming"]

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
multiple_crate_versions = "allow"
