[package]
name = "app-receiver"
version.workspace = true
authors.workspace = true
description = "DIS app receiver"
edition.workspace = true
rust-version.workspace = true
readme = "README.md"
license.workspace = true
repository.workspace = true
categories.workspace = true
keywords.workspace = true

[dependencies]
dis-rs = { path = "../dis-rs" }

[lints]
workspace = true
