[package]
name = "cdis-assemble"
version = "0.3.0"
description = """
An implementation of the Compressed-Distributed Interactive Simulation (SISO-STD-023-2024) protocol in Rust.

This main crate models C-DIS PDUs and facilities to read/write PDUs
from Rust data structures to the wire format and vice versa. Additionally, it supports the encoding/decoding of
regular DIS PDUs to and from its C-DIS variants.
"""
readme = "README.md"
keywords = ["simulation", "DIS", "C-DIS"]
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
categories.workspace = true

[dependencies]
dis-rs = { path = "../dis-rs" }
bytes = "1.9.0"
nom = "8.0.0"
bitvec = "1.0.1"
num = "0.4.3"
num-traits = "0.2.19"
thiserror = "2.0"

[lints]
workspace = true
