[package]
name = "cdis-gateway"
version = "0.3.0"
description = """
A gateway for the Compressed-Distributed Interactive Simulation protocol.

The gateway encodes/decodes DIS PDUs to/from C-DIS.
"""
readme = "README.md"
keywords = ["simulation", "DIS", "C-DIS", "gateway", "CLI"]
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
categories.workspace = true

[dependencies]
askama = { version = "0.12.1", features = ["with-axum"] }
askama_axum = "0.4.0"
async-stream = "0.3.6"
axum = { version = "0.7.9", features = ["tokio", "http2"] }
axum-extra = { version = "0.10.0", features = ["typed-header"] }
bytes = "1.9.0"
bytesize = "1.3.0"
cdis-assemble = { path = "../cdis-assemble" }
clap = { version = "4.5.23", features = ["derive"] }
clap_derive = "4.5.18"
dis-rs = { path = "../dis-rs" }
futures = "0.3.31"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
tokio = { version = "1.42.0", features = ["full"] }
tokio-stream = "0.1.17"
toml = "0.8.19"
tower-http = { version = "0.6.2", features = ["fs", "trace"] }
serde = "1.0.216"
serde_derive = "1.0.216"
socket2 = "0.5.8"

# these profiles produce a warning that they are ignored

#[profile.dev.build-override]
#debug = true

#[profile.release]
#panic = "unwind"
#codegen-units = 1
#lto = true
#strip = true

[lints]
workspace = true
