[package]
name = "cdis-gateway"
version = "0.3.1"
description = """
A gateway for the Compressed-Distributed Interactive Simulation protocol.

The gateway encodes/decodes DIS PDUs to/from C-DIS.
"""
readme = "README.md"
keywords = ["simulation", "DIS", "C-DIS", "gateway", "CLI"]
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
categories.workspace = true

[dependencies]
askama = "0.14.0"
askama_web = { version = "0.15.0", features = ["axum-0.8"] }
async-stream = "0.3.6"
axum = { version = "0.8.6", features = ["tokio", "http2"] }
axum-extra = { version = "0.10.3", features = ["typed-header"] }
bytes = "1.10.1"
bytesize = "2.2.0"
cdis-assemble = { path = "../cdis-assemble" }
clap = { version = "4.5.48", features = ["derive"] }
dis-rs = { path = "../dis-rs" }
futures = "0.3.31"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
tokio = { version = "1.48.0", features = ["full"] }
toml = "0.9.8"
tower-http = { version = "0.6.6", features = ["fs", "trace"] }
serde = "1.0.228"
serde_derive = "1.0.228"
socket2 = { version = "0.6.1", features = ["all"] }

# these profiles produce a warning that they are ignored

#[profile.dev.build-override]
#debug = true

#[profile.release]
#panic = "unwind"
#codegen-units = 1
#lto = true
#strip = true

[lints]
workspace = true
