[package]
name = "dis-assemble-gen-3"
version = "0.15.0"
description = """
A generation 3 implementation of the Distributed Interactive Simulation protocol (IEEE-1278.1) in Rust.

The main Gen-3 crate contains PDU implementations and facilities to read/write PDUs
from Rust data structures to the wire format and vice versa. It supports version 8 of the protocol.

Support for DIS version 8 is experimental, based on draft 5.
"""
readme = "README.md"
keywords = ["simulation", "DIS"]
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
categories.workspace = true

[features]
default = ["std"]
serde = ["dep:serde"]
std = ["bytes/std", "nom/std", "thiserror/std", "serde?/std"]

[dependencies]
bytes = { version = "1.11.1", default-features = false }
nom = { version = "8.0.0", default-features = false, features = ["alloc"] }
thiserror = { version = "2.0.18", default-features = false }
serde = { version = "1.0.228", optional = true, default-features = false, features = [
    "alloc",
    "derive",
] }

[build-dependencies]
dis-gen-siso-ref-010 = { path = "../dis-gen-siso-ref-010" }
dis-gen-ieee-1278-gen-3 = { path = "../dis-gen-ieee-1278-gen-3" }

[lints]
workspace = true
