[package]
name = "dis-gen-siso-ref-010"
version = "0.1.0"
description = """
Code generator for Distributed Interactive Simulation (IEEE-1278.1) protocol enumerations (SISO-REF-010), as used in the dis-rs crate.
"""
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
categories.workspace = true
keywords = ["SISO-REF-010", "generator", "Enummerations", "DIS"]

[dependencies]
quote = "1.0.45"
quick-xml = "0.40.1"
proc-macro2 = "1.0.106"
prettyplease = "0.2.37"
syn = "2.0.117"
tempfile = "3.27.0"
dis-gen-utils = { path = "../dis-gen-utils" }
toml = "1.1.2"
serde = { version = "1.0.228", features = ["derive"] }

[lints]
workspace = true
