[package]
name = "dis-infra-core"
version = "0.1.0"
description = """
Core infrastructure facilities and utilities for working with (DIS / C-DIS) data.

Defines basic traits and implementations for handling packets creating UDP/TCP sockets, transforming and monitoring data flows.
"""
readme = "README.md"
keywords = ["simulation", "DIS", "C-DIS", "gateway", "CLI"]
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
categories.workspace = true


[dependencies]
bytes = "1.7.1"
futures = "0.3.30"
#tracing = "0.1.40"
#tracing-subscriber = "0.3.18"
tokio = { version = "1.39.3", features = ["full"] }
#tokio-stream = "0.1.15"
#toml = "0.8.19"
serde = "1.0.209"
serde_derive = "1.0.209"
socket2 = "0.5.7"

