[package]
name = "dis-infra-core"
version = "0.1.0"
description = """
Core infrastructure facilities and utilities for working with (DIS / C-DIS) data.

Defines basic traits and implementations for handling packets creating UDP/TCP sockets, transforming and monitoring data flows.
"""
readme = "README.md"
keywords = ["simulation", "DIS", "C-DIS", "gateway", "CLI"]
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
categories.workspace = true


[dependencies]
bytes = "1.9.0"
futures = "0.3.30"
tracing = "0.1.41"
#tracing-subscriber = "0.3.18"
thiserror = "2.0"
tokio = { version = "1.42.0", features = ["full"] }
#tokio-stream = "0.1.15"
toml = "0.8.19"
serde = "1.0.217"
serde_derive = "1.0.217"
socket2 = "0.5.8"

