[package]
name = "dis-rs-macros"
version.workspace = true
authors.workspace = true
description = "Macros for dis-rs crate"
edition.workspace = true
rust-version.workspace = true
readme = "README.md"
license.workspace = true
repository.workspace = true
categories.workspace = true
keywords.workspace = true

[lib]
proc-macro = true

[dependencies]
quote = "1.0.36"
proc-macro2 = "1.0.81"
syn = "1.0.109"

[lints]
workspace = true
