[package]
name = "dis-rs"
version = "0.15.0"
description = """
An implementation of the Distributed Interactive Simulation protocol (IEEE-1278.1) in Rust.

This main crate contains PDU implementations and facilities to read/write PDUs
from Rust data structures to the wire format and vice versa. It supports versions 6 and 7 of the protocol.
"""
readme = "README.md"
keywords = ["simulation", "DIS"]
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
categories.workspace = true

[features]
serde = ["dis-assemble-gen-2/serde"]
#gen3 = ["dep:dis-assemble-gen-3"]

[dependencies]
dis-assemble-gen-2 = { path = "../dis-assemble-gen-2" }
#dis-assemble-gen-3 = { path = "../dis-assemble-gen-3", features = ["serde"], optional = true }

[lints]
workspace = true
