[package]
name = "dis-rs"
version = "0.14.0"
description = """
An implementation of the Distributed Interactive Simulation protocol (IEEE-1278.1) in Rust.

This main crate contains PDU implementations and facilities to read/write PDUs
from Rust data structures to the wire format and vice versa. It supports versions 6 and 7 of the protocol.
"""
readme = "README.md"
keywords = ["simulation", "DIS"]
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
categories.workspace = true

[features]
default = ["std"]
libm = ["dep:libm"]
serde = ["dep:serde"]
std = ["bytes/std", "nom/std", "thiserror/std", "serde?/std"]
pcap-file = ["dep:pcap-file"]
hotpath = ["dep:hotpath", "hotpath/hotpath", "hotpath/hotpath-alloc"]
_test_no_instrumentation = []

[dependencies]
bytes = { version = "1.11.1", default-features = false }
libm = { version = "0.2.16", optional = true }
nom = { version = "8.0.0", default-features = false, features = ["alloc"] }
thiserror = { version = "2.0.18", default-features = false }
serde = { version = "1.0.228", optional = true, default-features = false, features = [
    "alloc",
    "derive",
] }
hotpath = { version = "0.10.1", optional = true }
pcap-file = { version = "2.0.0", optional = true }

[dev-dependencies]
rstest.workspace = true
serde_json = "1.0.149"

[build-dependencies]
quote = "1.0.41"
quick-xml = "0.39.0"
proc-macro2 = "1.0.101"
prettyplease = "0.2.37"
syn = "2.0.106"

[lints]
workspace = true
