[package]
name = "dis_lib"
version = "0.1.0"
authors = ["Zeeger <zeeger@lubsen.eu>"]
description = """
An implementation of the Distributed Interactive Simulation protocol in Rust.
"""
edition = "2021"
license = "MIT"
readme = "README.md"
repository = "https://github.com/zlubsen/dis-rs/dis_lib"
categories = ["network-programming"]
keywords = ["simulation", "DIS"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []

[dependencies]
bytes = "1.1.0"
nom = "7.1.0"
dis_rs_macros = { version = "0.1.0", path = "../dis_rs_macros" }