[package]
name = "gateway-core"
version = "0.1.1"
description = """
Core infrastructure facilities and utilities for working with network data, such as DIS / C-DIS.

Defines basic traits and implementations for handling packets creating UDP/TCP sockets, transforming and monitoring data flows.
"""
readme = "README.md"
keywords = ["simulation", "DIS", "C-DIS", "gateway", "CLI"]
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
categories.workspace = true

[dependencies]
bytes = "1.10.1"
futures = "0.3.31"
tracing = "0.1.41"
thiserror = "2.0"
tokio = { version = "1.48.0", features = ["full"] }
toml = "0.9.8"
serde = "1.0.228"
serde_derive = "1.0.228"
serde_json = "1.0.145"
socket2 = { version = "0.6.1", features = ["all"] }
dis-rs = { path = "../dis-rs" }
