[package]
name = "recorder-cli"
version = "0.1.0"
description = """
A CLI interface for recorder.
"""
readme = "README.md"
keywords = ["CLI", "packets", "packets", "recorder", "player"]
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
categories.workspace = true

[dependencies]
tokio = { version = "1.44.1", features = ["macros", "rt-multi-thread"] }
recorder = { path = "../recorder" }
inquire = "0.7.5"

[lints]
workspace = true
