[package]
name = "custom-gateway-node"
version = "0.1.0"
edition = "2021"
publish = false

[[bin]]
name = "main"
path = "src/main.rs"

[dependencies]
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
gateway-core = { path = "../../gateway-core" }
tokio = "1.43.0"
toml = "0.8.19"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
