[package]
name = "custom-gateway-node"
version = "0.1.0"
edition = "2021"
publish = false

[[bin]]
name = "main"
path = "src/main.rs"

[dependencies]
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
gateway-core = { path = "../../gateway-core" }
tokio = "1.48.0"
toml = "0.9.8"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
